Fixed height of active section in portrait mode on mobile

--- a/style/sass/partials/_sections.scss
+++ b/style/sass/partials/_sections.scss
@@ -57,6 +57,7 @@
 }
 
 .section-active {
+  height: 100%;
   opacity: 1;
   visibility: visible;
   -webkit-transform: translate3d(0, 0, 0);
